fix: Bring buttons and labels closer in extensions
The labels of extensions were too far from the buttons. The extensions
page is still not perfect, but it's a small and cheap improvement.

--- a/style.css
+++ b/style.css
@@ -404,7 +404,13 @@ a.btn {
 
 #form-extension .horizontal-list,
 .stat #form-delete .horizontal-list {
+    width: auto;
     margin-bottom: .5rem;
+}
+
+#form-extension .horizontal-list .item + .item,
+.stat #form-delete .horizontal-list .item  + .item {
+    padding-left: 1rem;
 }
 
 /*=== Dropdown */
